<resources>
    <string name="app_name">GRANDAPP</string>
    <string name="activities">Activities</string>
    <string name="my_activities">My Activities</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update">UPDATE</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="title">TITLE</string>
    <string name="title_write">write the title here</string>
    <string name="description_write">write the description here</string>
    <string name="title_description">Write the title of the activity. This has to be short (between 5 and 8 words) to resume the main action of the activity that you want to create</string>
    <string name="description">DESCRIPTION</string>
    <string name="description_description">Write the description of the activity. This has to be enough long to describe between 5 and 8 lines the details of the activity.\nDon\'t write information about the where or when, you will do it in the next steps!</string>

    <string name="photos">PHOTOS</string>
    <string name="photos_description">Upload or take some photos of the activity. You will need to upload as minimum 1 photo or 4 as maximum. To do it click one of the four camera images bellow:</string>

    <string name="date_title">Pick the date</string>
    <string name="date_description">Pick the start and end date of the activity clicking them. If you don\'t know the end date let it empty. The end date must be older then initial one.</string>
    <string name="date_not_choosed">Not choosed</string>
    <string name="initial_date">Initial date:</string>
    <string name="end_date">End date:</string>

    <string name="title_location_permission">Location permission</string>
    <string name="text_location_permission">Allow GRANDAPP to access yout location?</string>
    <string name="ok">Ok</string>
    <string name="free_price">Free</string>
    <string name="upperTag">Information</string>
    <string name="images_title">Add some images</string>
    <string name="location_title">Pick the Location of your activity</string>
    <string name="capacity_title">Capacity</string>
    <string name="capacity_description">Write the capacity of people for the activity</string>
    <string name="price_title">Price</string>
    <string name="price_description">Write the price of the activity</string>
    <string name="preview_title">Preview</string>

    <string name="invalid_title_title">Invalid Title</string>
    <string name="invalid_title_description">Title is too short or is empty. Please try it again</string>

    <string name="invalid_description_title">Invalid Description</string>
    <string name="invalid_description_description">Description is too short or is empy. Please try it again</string>

    <string name="invalid_images_title">Invalid Images</string>
    <string name="invalid_images_description">There isn\'t any taken photo. Please take one and try it again</string>

    <string name="invalid_location_title">Invalid Location</string>
    <string name="invalid_location_description">Location is invalid. Please move the map and try it again</string>

    <string name="invalid_time_title">Invalid start time</string>
    <string name="invalid_time_description">The start time is not choosed or its already past. Please, try it again</string>

    <string name="invalid_endtime_title">Invalid end time</string>
    <string name="invalid_endtime_description">The end time is not choosed or its lower than start time. Please, try it again</string>

    <string name="invalid_capacity_title">Invalid Capacity</string>
    <string name="invalid_capacity_description">Capacity not valid or is empty. Please try it again</string>

    <string name="invalid_price_title">Invalid Price</string>
    <string name="invalid_price_description">Price not valid or is empty. Please try it again</string>

    <string name="title_activity_maps">Map</string>
    <string name="phone_error">Enter phone number</string>
    <string name="pass_error">Enter a valid password</string>
    <string name="name_error">Enter a valid name</string>
    <string name="pass2_error">The passwords does not match</string>
    <string name="login_error">Login Failed</string>
    <string name="login_success">Login Success</string>
    <string name="logout_success">Logout Success</string>
    <string name="forgotpsw_success">Password Sent</string>
    <string name="login_button">LOG IN</string>
    <string name="login_button_google">GOOGLE LOG IN</string>
    <string name="login_button_facebook">FACEBOOK LOG IN</string>
    <string name="register_button">SIGN UP</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register_message">Sign up now</string>
    <string name="welcomeRegister">Welcome!</string>
    <string name="welcomeLoginr">Hi, there!</string>
    <string name="email_error">Enter a valid email</string>
    <string name="join">Join</string>
    <string name="unjoin">UnJoin</string>
    <string name="vote">Vote</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="accept">ACCEPT</string>
    <string name="capacity_error">Capacity Error</string>

    <string name="forgot_pwd">Forgot password?</string>
    <string name="send">send</string>
    <string name="cancel">cancel</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="phone_bold"><b>Phone</b></string>
    <string name="email_bold"><b>Email</b></string>
    <string name="address">Address</string>
    <string name="complete_name">Complete name</string>
    <string name="username">Username</string>
    <string name="profile_picture">Profile picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_picture_desc">Click the profile image to change it</string>
    <string name="activity_creator">Creator</string>

    <string name="fgt_pswd_title">Forget password</string>
    <string name="fgt_pswd_description">Write the phone number in witch you created you account and clic SEND. Then you will receive an e-mail with the new password. It\'s recomendable to change your password after this process.</string>
    <string name="settings_profile">Profile</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="block_success">User blocked</string>
    <string name="unblock_success">User unblocked</string>
    <string name="achievements">Achievements</string>
    <string name="user_info">Information</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="change_password">Change password</string>
    <string name="change_pswd_description">Write the actual password first and then the new password 2 times and click CHANGE.</string>
    <string name="change">change</string>
    <string name="password_old">Old Password</string>
    <string name="password_new">New Password</string>
    <string name="password_new_re">Repeat New Password</string>
    <string name="change_password_success">Password changed</string>

    <string name="rate_title">Rate activity</string>
    <string name="rate_description">How would you rate this activity?</string>
    <string name="notnow">Not now</string>

    <string name="facebook_app_id">282493839277733</string>
    <string name="fb_login_protocol_scheme">fb282493839277733</string>
    <string name="emergency_contacts">Emergency contacts</string>
    <string name="edit_emergency_success">Emergency contacts updated successfully</string>
    <string name="edit_empty_error">Alias or Phone fields cannot be empty</string>
    <string name="alias">Alias</string>
    <string name="log_out">Log out</string>

    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_title_delete_act">Delete activity</string>
    <string name="dialog_desc_delete_act">Are you sure you want to delete this activity?</string>

    <string name="near_activity_created">Near activities created</string>
    <string name="user_joined_activity">User joined your activity</string>
    <string name="joined_activity_ended">Joined activity has ended</string>
    <string name="notifications">Notifications</string>
    <string name="filter">Filter</string>
    <string name="name">Name</string>
    <string name="reset">RESET</string>
    <string name="distance">Distance</string>
    <string name="sort">Sort by</string>
    <string name="category">Category</string>
    <string name="message">Chat</string>
    <string name="category_description">Select the category of the activity</string>
    <string name="infinite">infinite</string>
    <string name="guide">Guide</string>

    <string name="guide_menu_title">Main menu</string>
    <string name="guide_menu_description">Press this button to see all the features of the app</string>

    <string name="guide_create_title">Create new activity</string>
    <string name="guide_create_description">Press this button to create a new activity that will be visible by other users</string>

    <string name="guide_filter_title">Filter activities</string>
    <string name="guide_filter_description">Press this button to add or remove any filter for the main activities list</string>
    <string name="points">points</string>
    <string name="reset_filter">RESET FILTER</string>
    <string name="no_activities_description">There aren\'t any activity near or you have your filter too strong. Try it again reseteing the filter values</string>
    <string name="no_activities_title">No Activities found</string>
    <string name="general_error_title">unexpected error</string>
    <string name="general_error_description">Something was wrong. Please, try it again</string>

    <string-array name="filter_sort">
        <item>Create date desc</item>
        <item>Create date asc</item>
        <item>Start date desc</item>
        <item>Start date asc</item>
        <item>Price desc</item>
        <item>Price asc</item>
        <item>Name desc</item>
        <item>Name asc</item>
    </string-array>

    <string-array name="filter_categories">
        <item>None</item>
        <item>Dance</item>
        <item>Party</item>
        <item>Sports</item>
        <item>Music</item>
        <item>Art</item>
        <item>Talk</item>
        <item>Drink</item>
    </string-array>

    <string name="count_initial_value">0</string>
    <string name="button_label">Send</string>
    <string name="toast_message">Hurchatra!</string>
    <string name="input_placeholder">Write a message</string>
    <string name="chat">Conversation</string>

    <string-array name="main_viewpager_strings">
        <item>To the coolest social grandparents app!</item>
        <item>Keep your location to your family or friends</item>
        <item>Find and join all the near activities you most like</item>
        <item>Meet with people who are in the activity</item>
        <item>Create public or private activities of whatever you want</item>
        <item>Get points every time you join a activity</item>
        <item>Join now to the community to see more features!</item>
    </string-array>

    <string-array name="main_viewpager_strings_titles">
        <item>WELCOME</item>
        <item>STAY SECURE</item>
        <item>JOIN NEAR ACTIVITIES</item>
        <item>MEET NEW PEOPLE LIKE YOU</item>
        <item>CREATE NEW ACTIVITIES</item>
        <item>WIN POINTS</item>
        <item>AND MUCH MORE</item>
    </string-array>
</resources>
