<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_menu_slideshow"
            android:checked="true"
            android:title="@string/activities" />

        <item
            android:id="@+id/my_activities"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_activities" />
    </group>

    <item android:title="Session">
        <menu>
            <item
                android:id="@+id/account_settings"
                android:icon="@drawable/ic_user_default"
                android:title="@string/settings_profile" />

            <item
                android:id="@+id/emergency_contacts"
                android:icon="@drawable/ic_contact_phone_black_24dp"
                android:title="@string/emergency_contacts" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_power_off"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
