<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textColor="@color/color_dark_text"
        android:text="@string/change_pswd_description"
        android:textSize="17sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPasswordOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edPasswordOld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_old"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPasswordNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edPasswordNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_new"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPasswordNewRe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edPasswordNewRe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_new_re"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/color_gradient_button_start" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bChange"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/change"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>