<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#3E80B4"
    app:cardCornerRadius="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/fgt_pswd_title"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/photos_description"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/re_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="E-mail"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingTop="5dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginRight="7dp"
                android:background="@drawable/button_border"
                android:clickable="true"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="@color/color_gradient_button_start" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bSend"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:background="@drawable/button_gradient"
                android:clickable="true"
                android:text="@string/send"
                android:gravity="center"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>