<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rsb="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/filter"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/tvReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@drawable/btn_simple"
            android:text="@string/reset"
            android:layout_alignParentRight="true"
            android:textColor="@color/color_grey_2"
            android:textSize="17sp"
            android:padding="6dp"
            android:textStyle="bold" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="@color/color_dark_text"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:id="@+id/rsbPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout"
                android:layout_marginTop="-25dp"
                rsb:absoluteMaxValue="150"
                rsb:absoluteMinValue="0"
                rsb:showLabels="false" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/price_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPriceValues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="left"
                    android:text="@string/price_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/color_gradient_button_start" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bSend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/send"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>