<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_grandapp_icon"
            android:transitionName="logo_transition" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-25dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/bLoginInit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/login_button"
            android:textColor="#FFF"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bRegisterInit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/register_button"
            android:textColor="#FFF"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>